# apauley.github.io

./: CNAME  LICENSE  README.md  _config.yml  about.md  index.html  pauley.cabal  site.hs
_includes/: sidebar.html
_layouts/: default.html
_posts/: 2015-04-19-what-is-the-essence-of-quality-code.md  2015-04-21-what-is-the-essence-of-quality-code.md
assets/css/_sass/helpers/: _variables.scss
browser-warning/: index.html
templates/: head.html
