name:                pauley
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/apauley/pauley#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas Pauley
maintainer:          hakyll@pauley.org.za
copyright:           2018 Andreas Pauley
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable pauley
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
